--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,22 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 * {
-  box-sizing: border-box;
+  font-family: Roboto, sans-serif;
+}
+
+.skill {
+  @apply cursor-pointer;
+}
+
+.button {
+  @apply bg-blue-700 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded-full;
+}
+
+.link {
+  @apply text-blue-600 underline;
 }
