--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,11 +10,11 @@
 }
 
 .skill {
-  @apply cursor-pointer w-4 h-4 lg:w-8 lg:h-8;
+  @apply cursor-pointer w-4 h-4 md:w-8 md:h-8;
 }
 
 .button {
-  @apply block w-full lg:inline lg:w-auto bg-blue-700 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded-full;
+  @apply block w-full md:inline md:w-auto bg-blue-700 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded-full;
 }
 
 .link {
